--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#a26b2c" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Blog | World Coins Collection</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
